<resources>
    <string name="app_name">All Video Downloader 2023</string>
    <string name="short_name">Tiles</string>
    <string name="straight">straight</string>
    <string name="eight">8</string>
    <string name="rand">random</string>
    <string name="animSpeed">Animation Speed</string>
    <string name="parallax">Parallax Effect    </string>
    <string name="update">
    <![CDATA[
        <b>Version 1.65:</b>
        <p>
            Parallax Effect limited and visually optimized.
        </p>
        <p>
            Bump Mapping smoothed out.
        </p>
        <p>
            Homescreen swipes improved.
        </p>
        <p>
            UI rounded for better fitting "modern" displays and because it is fancy.
        </p>
        <p>
            Fixed Crashes on Mali GPU Devices.
        </p>
     ]]>
    </string>
    <string name="pOn">Parallax Effect enabled</string>
    <string name="pOff">Parallax Effect disabled</string>
    <string name="colordropdown">background color</string>
    <string name="readdropdown">readable color fade</string>
    <string name="set">Set as Wallpaper</string>
    <string-array name="colors">
        <item>RED</item>
        <item>BLUE</item>
        <item>GREEN</item>
        <item>COLORFUL</item>
        <item>PINK</item>
        <item>AUTUMN</item>
        <item>WINTER WONDERLAND</item>
    </string-array>
    <string-array name="colors_intern">
        <item>RED</item>
        <item>BLUE</item>
        <item>GREEN</item>
        <item>COLORFUL</item>
        <item>PINK</item>
        <item>AUTUMN</item>
        <item>WINTER WONDERLAND</item>
    </string-array>
    <string name="notification">In the mood for a change? :)</string>
    <string name="menuImp">Impressum</string>
    <string name="impr">Impressum</string>
    <string name="wallapaper_description">A space wallpaper with dynamic shadows and movement.</string>
    <string name="settings_button">Settings</string>
    <string name="set_wallpaper_button">Set Wallpaper</string>
    <string name="greeting">Press the button to set the wallpaper</string>
    <string name="title_hi_res_textures">Use high resolution textures</string>
    <string name="title_select_planet">Select planet</string>
    <string name="summary_select_planet">Select which planet/moon to use as the foreground</string>
    <string name="title_select_animation">Select animation</string>
    <string name="summary_select_animation">Select which animation to use</string>
    <string name="title_revolve_time">Select revolve time</string>
    <string name="summary_revolve_time">Select the time it will take for the planet to perform one revolution</string>
    <string name="summary_hi_res_textures">Enables using hi-resolution textures rather than the standard ones. Will cause frames drops and more memory usage.</string>
    <string name="key_hi_res_textures">hi_res_textures</string>
    <string name="key_selected_planet">selected_planet</string>
    <string name="key_select_animation">selected_animation</string>
    <string name="key_revolve_time">revolve_time</string>
    <string name="title_general">General</string>
    <string name="title_about">About</string>
    <string name="title_advanced_settings">Advanced</string>
    <string name="title_over_draw">Overdraw amount</string>
    <string name="summary_over_draw">The left and right overdraw of animators. Default is 150, increasing it will increase the size of the planets.</string>
    <string name="key_over_draw">overdraw_amt</string>
    <string name="title_offset_y">Offset y</string>
    <string name="summary_offset_y">The amount to offset the planets relative to the y coordinate. Default is 600, increasing it will shift the planets towards the center.</string>
    <string name="key_offset_y">offset_y</string>
    <string name="toast_sensor_error">Sorry! This device does not support Rotation Vector Sensor.</string>
    <string name="toast_invalid_pic_path">Invalid picture path!</string>
    <string name="toast_failed_set_picture">Setting failed. Please retry!</string>
    <string name="toast_failed_launch_wallpaper_chooser">Couldn\'t launch wallpaper chooser. You can still activate Live Slider by choosing \"Live Wallpapers\" in your home screen wallpaper picker.</string>
    <string name="introduction1">Welcome!</string>
    <string name="introduction2">
        <![CDATA[
            This Live Wallpaper can produce a parallax effect by slightly offsetting the position of the wallpaper.<br>
            *It is required to obtain the device\'s rotation angle data from <b>Rotation Vector Sensor</b> in real time. You can check whether your device supports the sensor by rotating the device and seeing whether the cube below changes its perspective.
        ]]>
    </string>
    <string name="picture">Picture</string>
    <string name="picture_default">Default</string>
    <string name="picture_custom">Custom</string>
    <string name="range">Range</string>
    <string name="delay">Speed</string>
    <string name="scroll">Wallpaper scrolling</string>
    <string name="power_save">Pause in battery saver mode</string>
    <string name="activate">Activate</string>
    <string name="wallpapers_slideshow">Wallpapers Slideshow</string>
    <string name="settings_preview">Settings Preview</string>
    <string name="select_playlist">Please select a wallpapers playlist to enable slideshow!</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="wallpaper_settings">Wallpaper Settings</string>
    <string name="thumbnail">thumbnail</string>
    <string name="playlist_activation">You can activate and edit wallpapers in this playlist right here and any previous selected wallpaper will be changed respectively. </string>
    <string name="single_wallpaper_alert">Are you sure you want to disable current Playlist slideshow and continue with current single wallpaper selection…</string>
    <string name="title_reset_advanced">Reset advanced settings</string>
    <string name="key_reset_advanced">reset_advanced</string>
    <string name="background_illustration">Background Illustration</string>
    <string name="splash_string">Splash Logo</string>
    <string name="title_settings">Settings</string>
    <string name="wallpaper_description_intro">Planet Live wallpaer is a space-based wallpaper with many different planets, moons, and stars to choose from. It uses dynamic shadow casting to create a beautiful looking dynamic wallpaper.</string>
    <string name="clock_description_intro">Analog Clock Live Wallpaper , you can customize Clock like your style.
\nSelect your color and make unique Analog clock live wallpaper.</string>
    <string name="wallpaper_description">A wallpaper of a fractal, construct based in a clock displaying the current time.</string>
    <string name="pref_update_enabled">Update clock</string>
    <string name="pref_update_freq">Update frequency</string>
    <string name="pref_update_freq_sum">Update every %1$s milliseconds</string>
    <string name="pref_clock_type">Clock Type</string>
    <string name="pref_set_button">Use this wallpaper</string>
    <string name="pref_clock_scale">Size</string>
    <string name="pref_fractal_deep">Fractal Deep</string>
    <string name="pref_save_button">Save Screenshot</string>
    <string name="toast_saved_wallpaper">Saved in Pictures Folder</string>
    <string name="folder_statuses">WhatsAppStatusSaver</string>
    <string name="image">Images</string>
    <string name="video">Videos</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="oops">Oops! not Status Found 😔</string>
    <string name="hintSearchMess">Search here...</string>
    <string name="allow">2. Click on <b> Allow </b></string>
    <string name="getit">Get it</string>
    <string name="close">Close</string>
    <string name="appnotinstall">Application Not Found. Please Install the Application</string>
    <string name="allow_whatsapp_access">Allow Whatsapp Access</string>
    <string name="getwhatsappstatus">Get WhatsApp Status</string>
    <string name="nextscreen">1. Next Screen -> Click on <b> Allow to access <br /> &#x20; &#x20; &#x20;this folder </b></string>
    <string name="gb_PoppinsMedium">Poppins-Medium.ttf</string>
    <string name="gb_download">/Download/</string>
    <string name="gb_no_result_found">Results not found</string>
    <string name="gb_pathSeparator">/</string>
    <string name="gb_picker_title">Select Contacts</string>
    <string name="gb_primary">primary</string>
    <string name="gb_rate_me_message">If you enjoy using this app, please take a moment to rate it on Google Play. Thank you for your support!</string>
    <string name="gb_rate_me_neutral_btn">Exit</string>
    <string name="gb_rate_me_positive_btn">Rate App</string>
    <string name="gb_rate_me_title">Rate Whats Web Scan App</string>
    <string name="gb_search_hint">Search...</string>
    <string name="gb_select_country">Select a county/region</string>
    <string name="gb_sshow">\n 1). Open WhatsApp.\n\n 2). Watch the status you want to download.\n\n 3). Once status load completely, return back to this application.\n\n 4). You will find status hear.\n\n 5). To save the status click on Download icon.\n\n 6). Last seen status will be on top of the screen. Enjoy :)\n</string>
    <string name="gb_status_image">Status Images</string>
    <string name="gb_status_video">Status Videos</string>
    <string name="gb_storage">storage</string>
    <string name="gb_tv_no_contacts">No contacts found</string>
    <string name="gb_tv_select_all_btn_text">Select All</string>
    <string name="gb_tv_select_btn_text_disabled">Finish</string>
    <string name="gb_tv_select_btn_text_enabled">Finish(%1$s)</string>
    <string name="gb_tv_unselect_all_btn_text">Un-select All</string>
    <string name="gb_two_dot">:</string>
    <string name="gb_user_agent_string">Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36</string>
    <string name="gb_whatsapp_host">.whatsapp.com</string>
    <string name="gb_whatsapp_web_url">https://web.whatsapp.com</string>
    <string name="gb_whatsapp_not_installed">Whtasapp not installed.</string>
    <string name="gb_videos">Videos</string>
    <string name="gb_images">Images</string>
    <string name="gb_saved_to">Saved to:</string>
    <string name="gb_download_complete">Download Completed</string>
    <string name="gb_wrong_folder">Wrong folder</string>
    <string name="gb_selected_wrong_folder">You have selected wrong folder. Please select .Statuses folder to view Whatsapp Status.</string>
    <string name="gb_app_not_available">App Not Available.</string>
    <string name="gb_no_app_installed">No application found to open this file.</string>
    <string name="gb_ok">OK</string>
    <string name="gb_share_txt">Hey view/download this image</string>
    <string name="gb_share_image_via">Share File via...</string>
    <string name="gb_do_u_want_to_dlt">Do you want to delete?</string>
    <string name="gb_yes">Yes</string>
    <string name="gb_no">No</string>
    <string name="gb_file_deleted">File Deleted.</string>
    <string name="privacy">      By clicking you are Agreeing to  <font fgcolor="#4196F8">Privacy Policy</font>\n                            and <font fgcolor="#4196F8">Terms &amp; Conditions</font></string>
    <string name="gb_network_error">No Internet!\nMake sure you are connect to Internet</string>
    <string name="privacy_policy">Terms of Use</string>
    <string name="walk">Walk &amp; Chat</string>
    <string name="select_country">Select a county</string>
    <string name="picture_description">Description</string>
    <string name="picture_title">Title</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="message_number_empty">Please enter number</string>
    <string name="message_number_error">Number not registered correctly</string>
</resources>