<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:background="@drawable/slider"
    android:orientation="vertical"
    android:padding="0dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/slider"
        android:contentDescription="@string/background_illustration"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:id="@+id/splash_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_edit_text_round"
        android:backgroundTint="#737373"
        android:orientation="vertical"
        android:translationY="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splash_string"
            android:scaleType="fitCenter"
            android:src="@drawable/splash" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:contentDescription="@string/settings_button"
                android:onClick="launchSettingsIntent2"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_applications_white_24dp"
                android:theme="@style/RippleButton"
                app:tint="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="#979393" />

            <ImageButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:contentDescription="@string/set_wallpaper_button"
                android:onClick="launchIntent2"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image_white_24dp"
                android:theme="@style/RippleButton"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:lineSpacingMultiplier="1.2"
            android:text="This Live Wallpaper can produce a parallax effect by slightly offsetting the position of the wallpaper. Show scrollable images in wallpaper make user to ride on roller caster of their memories."
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>